@@ -1,0 +1,104 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
+<plist version="1.0">
+<dict>
+	<key>angle</key>
+	<real>90</real>
+	<key>angleVariance</key>
+	<real>360</real>
+	<key>blendAdditive</key>
+	<real>1</real>
+	<key>blendFuncDestination</key>
+	<integer>1</integer>
+	<key>blendFuncSource</key>
+	<integer>770</integer>
+	<key>duration</key>
+	<real>-1</real>
+	<key>emitterType</key>
+	<real>0.0</real>
+	<key>finishColorAlpha</key>
+	<real>1</real>
+	<key>finishColorBlue</key>
+	<real>0.0</real>
+	<key>finishColorGreen</key>
+	<real>0.0</real>
+	<key>finishColorRed</key>
+	<real>0.0</real>
+	<key>finishColorVarianceAlpha</key>
+	<real>0.0</real>
+	<key>finishColorVarianceBlue</key>
+	<real>0.0</real>
+	<key>finishColorVarianceGreen</key>
+	<real>0.0</real>
+	<key>finishColorVarianceRed</key>
+	<real>0.0</real>
+	<key>finishParticleSize</key>
+	<real>37</real>
+	<key>finishParticleSizeVariance</key>
+	<real>0.0</real>
+	<key>gravityx</key>
+	<real>0.0</real>
+	<key>gravityy</key>
+	<real>0.0</real>
+	<key>maxParticles</key>
+	<real>934</real>
+	<key>maxRadius</key>
+	<real>276.20999145507812</real>
+	<key>maxRadiusVariance</key>
+	<real>154.94999694824219</real>
+	<key>minRadius</key>
+	<real>0.0</real>
+	<key>particleLifespan</key>
+	<real>4</real>
+	<key>particleLifespanVariance</key>
+	<real>1</real>
+	<key>radialAccelVariance</key>
+	<real>0.0</real>
+	<key>radialAcceleration</key>
+	<real>-20</real>
+	<key>rotatePerSecond</key>
+	<real>35.529998779296875</real>
+	<key>rotatePerSecondVariance</key>
+	<real>0.0</real>
+	<key>sourcePositionVariancex</key>
+	<real>0.0</real>
+	<key>sourcePositionVariancey</key>
+	<real>0.0</real>
+	<key>sourcePositionx</key>
+	<real>169.91000366210938</real>
+	<key>sourcePositiony</key>
+	<real>228.71000671386719</real>
+	<key>speed</key>
+	<real>59.209999084472656</real>
+	<key>speedVariance</key>
+	<real>10</real>
+	<key>startColorAlpha</key>
+	<real>1</real>
+	<key>startColorBlue</key>
+	<real>0.75999999046325684</real>
+	<key>startColorGreen</key>
+	<real>0.25</real>
+	<key>startColorRed</key>
+	<real>0.11999999731779099</real>
+	<key>startColorVarianceAlpha</key>
+	<real>0.0</real>
+	<key>startColorVarianceBlue</key>
+	<real>0.0</real>
+	<key>startColorVarianceGreen</key>
+	<real>0.0</real>
+	<key>startColorVarianceRed</key>
+	<real>0.0</real>
+	<key>startParticleSize</key>
+	<real>37</real>
+	<key>startParticleSizeVariance</key>
+	<real>10</real>
+	<key>tangentialAccelVariance</key>
+	<real>50</real>
+	<key>tangentialAcceleration</key>
+	<real>50</real>
+	<key>textureFileName</key>
+	<string>Galaxy.png</string>
+	<key>textureImageData</key>
+	<string>H4sIAAAAAAAAAwFmA5n8iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAADLUlEQVRYCcXX51JbQRCEUeOc/f6v6ZzxHKFPLAoI84epmrp7985294QVxcXl5eWjh7Sn9yB/MWcej19sXQb87/iP8f+yiztWAOmzcYL5k/F9AX9m7/fWf83zTmLOVeD5AHECWieiKpR95D8nlhPcepbH7TYBL+dI/mrWRCRkrQIBZY9Q5vzb+PdxQj2P2ikBCPnrxb0TRMQpAYiRIa9lVcregR0TgATZm/G3W7cmxn5VaA6qQNkjEkNAMbPcDOpBJfYF6DMByJC/H3+3XSfC97IziATov8FD8HUcDmzZs+bETSF0Z+cEICeCE0TYOQFlHznSZoTQkwIc5PW+FqwC7NUGVagCXTvlXzNHXnXE5LsrulYAYFduX4Ts11b4LlaWlbXBWzNH2GxojzN4jgogJgENYreganyYGELsq1YCAOp9CZX5eivEwy9mltcvPvqwirBHSGKIQE6Eitg35forO5mxSo5cDJyVHIf3TRVSIxNgiUgIUO5Abel2qII4hLJnSk5M7XC2rMPGU5s2APO++11PiKBVUECEyAq5athHyvS6TO2vhOHB72/ILK+VtHnb0+EEAkeiLZGV2UpyG94cvRbgh+KcGyzenZb5l3FPbbBfzDks3zcmE9aBCIBF1FCt16meO98M6L3BEpeohIUHP65ZXvXJM2IH8oCAATZYiJWc+a7swJF/HvddnHjnuLgwE4RvY1XAAVMuwAHvHPA61cUDNnD6DUws8k/j2kJEZ8NahdjbWIBeVvJIgSISh4yJ8931SgBwpMhVwtPZKiIeaSJmeWWrgMolENh6pSKXrTjftcKU66m9ziViFSI+AWJ3tgoQADTwrtdKLvvinE2AfcAylTXyj9tn1UiE8ztbBdhUIiD2u9ez3PS5LP0QJe6UgKpgJhpOuPBv2DEBMubAmbI3H0BqDYEJcBOAy06mqpCI/xIw5zYViFx/gZc98IZyX0DtITIR+4M4n27afgX6CgB52dffsq9FawWqkipUCWLyWR7aKQEiHVwFuHbrX7batApNRO3wPOj77O3swf8zuquAneJZaEPZ14KqcOOKrYdOre8j4BTWvfZl8qD2D7ghcomuE8XXAAAAAElFTkSuQmCCksg8PmYDAAA=</string>
+</dict>
+</plist>
